--- a/events.html
+++ b/events.html
@@ -23,6 +23,6 @@
   </main>
 
   <!-- JavaScriptを読み込む -->
-  <script src="script.ja"></script>
+  <script src="script.js"></script>
 </body>
 </html>
