--- a/header.html
+++ b/header.html
@@ -1,11 +1,9 @@
 <header class="site-header">
-    <div class="container">
-      <h1 class="site-title">ぼうそうV</h1>
-      <nav class="nav-buttons">
-        <a href="index.html" class="nav-button">マップ</a>
-        <a href="events.html" class="nav-button">イベント</a>
-        <button class="menu-button">メニュー</button>
-      </nav>
-    </div>
-  </header>
-  
+  <div class="container">
+    <h1 class="site-title">ぼうそうV</h1>
+    <nav class="nav-buttons">
+      <a href="index.html" class="nav-button oval">Map</a>
+      <a href="events.html" class="nav-button oval">Event</a>
+    </nav>
+  </div>
+</header>
