--- a/header.html
+++ b/header.html
@@ -1,9 +1,31 @@
-<header class="site-header">
-  <div class="container">
-    <h1 class="site-title">ぼうそうV</h1>
-    <nav class="nav-buttons">
-      <a href="index.html" class="nav-button oval">Map</a>
-      <a href="events.html" class="nav-button oval">Event</a>
-    </nav>
-  </div>
-</header>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ぼうそうV</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- ヘッダー -->
+  <header class="site-header">
+    <div class="container">
+      <div class="logo">
+        <img src="assets/logo.png" alt="ぼうそうVロゴ">
+      </div>
+      <h1 class="site-title">ぼうそうV</h1>
+      <nav class="nav-buttons">
+        <a href="index.html" class="nav-button oval">Map</a>
+        <a href="events.html" class="nav-button oval">Event</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- メインコンテンツ -->
+  <main class="map-container">
+    <div class="map">
+      マップがここに表示されます
+    </div>
+  </main>
+</body>
+</html>
