--- a/header.html
+++ b/header.html
@@ -1,14 +1,17 @@
-  <!-- ヘッダー -->
-  <header class="site-header">
-    <div class="container">
-      <div class="logo">
-        <img src="assets/logo.png" alt="ぼうそうVロゴ">
-      </div>
-      <h1 class="site-title">ぼうそうV</h1>
-      <nav class="nav-buttons">
-        <a href="index.html" class="nav-button oval">Map</a>
-        <a href="events.html" class="nav-button oval">Event</a>
-      </nav>
+<header class="site-header">
+  <div class="container">
+    <div class="logo">
+      <img src="assets/logo.png" alt="ぼうそうVロゴ">
     </div>
-  </header>
-  
+    <h1 class="site-title">ぼうそうV</h1>
+    <nav class="nav-buttons">
+      <a href="index.html" class="nav-button oval">
+        <img src="assets/map-icon.png" alt="Map Icon" class="button-icon"> Map
+      </a>
+      <a href="events.html" class="nav-button oval">
+        <img src="assets/event-icon.png" alt="Event Icon" class="button-icon"> Event
+      </a>
+    </nav>
+  </div>
+</header>
+
