--- a/header.html
+++ b/header.html
@@ -6,10 +6,10 @@
     <h1 class="site-title">ぼうそうV</h1>
     <nav class="nav-buttons">
       <a href="index.html" class="nav-button oval">
-        <img src="assets/map-icon.png" alt="Map Icon" class="button-icon"> Map
+        <img src="assets/map-icon.png" alt="Map Icon" class="button-icon map-icon"> Map
       </a>
       <a href="events.html" class="nav-button oval">
-        <img src="assets/event-icon.png" alt="Event Icon" class="button-icon"> Event
+        <img src="assets/event-icon.png" alt="Event Icon" class="button-icon event-icon"> Event
       </a>
     </nav>
   </div>
