--- a/header.html
+++ b/header.html
@@ -9,6 +9,21 @@
         <img src="assets/event-icon.jpg" alt="Event Icon" class="button-icon event-icon"> Event
       </a>
     </nav>
+    <!-- ハンバーガーメニューボタン -->
+    <button class="menu-button" id="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button> 
   </div>
 </header>
 
+<!-- メニューバー -->
+<div class="side-menu" id="side-menu">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="events.html">Events</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</div>
