--- a/header.html
+++ b/header.html
@@ -1,5 +1,11 @@
 <header class="site-header">
   <div class="container">
+    <!-- ハンバーガーメニューボタン -->
+    <button class="menu-button" id="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button> 
     <h1 class="site-title">ぼうそうV</h1>
     <nav class="nav-buttons">
       <a href="index.html" class="nav-button oval">
@@ -9,21 +15,15 @@
         <img src="assets/event-icon.jpg" alt="Event Icon" class="button-icon event-icon"> Event
       </a>
     </nav>
-    <!-- ハンバーガーメニューボタン -->
-    <button class="menu-button" id="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button> 
   </div>
 </header>
 
 <!-- メニューバー -->
 <div class="side-menu" id="side-menu">
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="events.html">Events</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="index.html">マップ</a></li>
+    <li><a href="events.html">イベント</a></li>
+    <li><a href="about.html">ぼうそうV説明</a></li>
+    <li><a href="contact.html">お問い合わせ</a></li>
   </ul>
 </div>
