--- a/header.html
+++ b/header.html
@@ -32,7 +32,9 @@
   </header>
 
   <!-- サイドメニューバー -->
+  <div class="overlay" id="overlay"></div> <!-- 薄暗くするオーバーレイ-->
   <div class="side-menu" id="side-menu">
+    <button class="close-button" id="close-button">×</button> <!-- 閉じるボタン -->
     <ul>
       <li><a href="index.html">マップ</a></li>
       <li><a href="events.html">イベント</a></li>
