--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
         <span></span>
       </button> 
       <!-- サイトタイトル -->
-      <h1 class="site-title">ぼうそうV</h1>
+      <h1 class="site-title">SecureTrip</h1>
       <!-- ナビゲーションボタン -->
       <nav class="nav-buttons">
         <a href="index.html" class="nav-button oval">
