--- a/header.html
+++ b/header.html
@@ -16,9 +16,12 @@
         <span></span>
         <span></span>
         <span></span>
-      </button> 
+      </button>  
       <!-- サイトタイトル -->
-      <h1 class="site-title">SecureTrip</h1>
+      <div class="site-title">
+        <span class="site-subtitle">非日常の旅路に、日常の防災を</span>
+        SecureTrip
+      </div>
       <!-- ナビゲーションボタン -->
       <nav class="nav-buttons">
         <a href="index.html" class="nav-button oval">
