--- a/header.html
+++ b/header.html
@@ -25,10 +25,10 @@
       <!-- ナビゲーションボタン -->
       <nav class="nav-buttons">
         <a href="index.html" class="nav-button oval">
-          <img src="assets/map-icon.jpg" alt="Map Icon" class="button-icon map-icon"> Map
+          <img src="assets/map-icon.jpg" alt="Map Icon" class="button-icon map-icon"> マップ
         </a>
         <a href="events.html" class="nav-button oval">
-          <img src="assets/event-icon.jpg" alt="Event Icon" class="button-icon event-icon"> Event
+          <img src="assets/event-icon.jpg" alt="Event Icon" class="button-icon event-icon"> イベント
         </a>
       </nav>
     </div>
