--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@
         <a href="index.html" class="nav-button oval">
           <img src="assets/map-icon.jpg" alt="Map Icon" class="button-icon map-icon"> マップ
         </a>
-        <a href="events.html" class="nav-button oval">
+        <a href="plan.html" class="nav-button oval">
           <img src="assets/event-icon.jpg" alt="Event Icon" class="button-icon event-icon"> イベント
         </a>
       </nav>
@@ -40,7 +40,7 @@
     <button class="close-button" id="close-button">×</button> <!-- 閉じるボタン -->
     <ul>
       <li><a href="index.html">マップ</a></li>
-      <li><a href="events.html">イベント</a></li>
+      <li><a href="plan.html">旅行プラン</a></li>
       <li><a href="about.html">ぼうそうV説明</a></li>
       <li><a href="contact.html">お問い合わせ</a></li>
     </ul>
