--- a/header.html
+++ b/header.html
@@ -28,7 +28,7 @@
           <img src="assets/map-icon.jpg" alt="Map Icon" class="button-icon map-icon"> マップ
         </a>
         <a href="plan.html" class="nav-button oval">
-          <img src="assets/event-icon.jpg" alt="Event Icon" class="button-icon event-icon"> イベント
+          <img src="assets/event-icon.jpg" alt="Event Icon" class="button-icon event-icon"> プラン
         </a>
       </nav>
     </div>
