--- a/header.html
+++ b/header.html
@@ -25,12 +25,14 @@
       <!-- ナビゲーションボタン -->
       <nav class="nav-buttons">
         <a href="index.html" class="nav-button oval">
-          <img src="assets/map-icon.jpg" alt="Map Icon" class="button-icon map-icon"> マップ
+          <svg class="button-icon map-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"  height="24" fill="#007BFF">
+            <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"></path>
+          </svg>マップ
         </a>
         <a href="plan.html" class="nav-button oval">
           <svg class="button-icon event-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="#007BFF">
             <path d="M14.5 6.5l3 -2.9a2.05 2.05 0 0 1 2.9 2.9l-2.9 3l2.5 7.5l-2.5 2.55l-3.5 -6.55l-3 3v3l-2 2l-1.5 -4.5l-4.5 -1.5l2 -2h3l3 -3l-6.5 -3.5l2.5 -2.5l7.5 2.5z"></path>
-          </svg> トリップ
+          </svg>トリップ
         </a>
       </nav>
     </div>
