--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
       <!-- ナビゲーションボタン -->
       <nav class="nav-buttons">
         <a href="index.html" class="nav-button oval">
-          <svg class="button-icon map-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"  height="24" fill="#007BFF">
+          <svg class="button-icon map-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"  height="24" fill="none" stroke="#007BFF" stroke-width="2">
             <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"></path>
           </svg>マップ
         </a>
