--- a/header.html
+++ b/header.html
@@ -32,7 +32,7 @@
         <a href="plan.html" class="nav-button oval">
           <svg class="button-icon event-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="#0082CA" stroke-width="2">
             <path d="M14.5 6.5l3 -2.9a2.05 2.05 0 0 1 2.9 2.9l-2.9 3l2.5 7.5l-2.5 2.55l-3.5 -6.55l-3 3v3l-2 2l-1.5 -4.5l-4.5 -1.5l2 -2h3l3 -3l-6.5 -3.5l2.5 -2.5l7.5 2.5z"></path>
-          </svg>トリップ
+          </svg>旅行
         </a>
       </nav>
     </div>
