--- a/plan.html
+++ b/plan.html
@@ -11,7 +11,8 @@
   <div id="header-container"></div>
 
 <!-- 本文 -->
-  <main class="plan-container">    
+  <main class="plan-container"> 
+    <h1>旅行プランを探す</h1>
   </main>
 
   <script src="script.js"></script>
