--- a/plan.html
+++ b/plan.html
@@ -36,6 +36,16 @@
         <div class="swiper-button-next"></div>
       </div>
     </div>
+
+
+    <!-- 以下の内容を追加 -->
+    <section class="plan-description">
+     <h2>ぼうそうVの旅行プランについて</h2>
+     <p>
+       ぼうそうVでは、さまざまなテーマに基づいた旅行プランを提案しています。
+       自然、文化、アクティビティなど、多彩なプランからあなたに最適な旅をお楽しみください。
+     </p>
+    </section>   
   </main>
 
   <script src="script.js"></script>
