--- a/plan.html
+++ b/plan.html
@@ -22,7 +22,9 @@
     <!-- カルーセル -->
     <div class="swiper-container">
       <div class="swiper-wrapper">
-        <div class="swiper-slide">プラン1: 温泉とグルメの旅</div>
+        <div class="swiper-slide">
+          <img src="assets/plan1.jpg" alt="広告１" class="slide-image">
+        </div>
         <div class="swiper-slide">プラン2: アウトドアアドベンチャー</div>
         <div class="swiper-slide">プラン3: 歴史探訪と文化体験</div>
       </div>
