--- a/plan.html
+++ b/plan.html
@@ -23,7 +23,7 @@
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="assets/plan1.jpg" alt="広告１" class="slide-image">
+          <img src="assets/1plan.jpg" alt="広告１" class="slide-image">
         </div>
         <div class="swiper-slide">プラン2: アウトドアアドベンチャー</div>
         <div class="swiper-slide">プラン3: 歴史探訪と文化体験</div>
