--- a/plan.html
+++ b/plan.html
@@ -25,8 +25,12 @@
         <div class="swiper-slide">
           <img src="assets/1plan.jpg" alt="広告１" class="slide-image">
         </div>
-        <div class="swiper-slide">プラン2: アウトドアアドベンチャー</div>
-        <div class="swiper-slide">プラン3: 歴史探訪と文化体験</div>
+        <div class="swiper-slide">
+          <img src="assets/plan2.jpg" alt="広告２" class="slide-image">
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/plan3.jpg" alt="広告３" class="slide-image">
+        </div>
       </div>
       <!-- ページネーションとボタンのラッパー -->
       <div class="swiper-controls">
