--- a/plan.html
+++ b/plan.html
@@ -42,10 +42,10 @@
 
     <!-- 以下の内容を追加 -->
     <section class="plan-description">
-     <h2>ぼうそうVの旅行プランについて</h2>
+     <h2>SecureTripの旅行プラン</h2>
      <p>
-       ぼうそうVでは、さまざまなテーマに基づいた旅行プランを提案しています。
-       自然、文化、アクティビティなど、多彩なプランからあなたに最適な旅をお楽しみください。
+       SecureTripでは、さまざまなテーマに基づいた旅行を楽しみながら、防災について学べるプランを提案しています。
+       あなたに最適な旅をお楽しみください。
      </p>
     </section>   
   </main>
