--- a/plan.html
+++ b/plan.html
@@ -44,8 +44,7 @@
     <section class="plan-description">
      <h2>SecureTripの旅行プラン</h2>
      <p>
-       SecureTripでは、さまざまなテーマに基づいた旅行を楽しみながら、防災について学べるプランを提案しています。
-       あなたに最適な旅をお楽しみください。
+       SecureTripでは、防災について学びながら、それぞれの土地の魅力を感じられるプランを提案しています。
      </p>
     </section>   
   </main>
