--- a/plan.html
+++ b/plan.html
@@ -46,7 +46,14 @@
      <p>
        SecureTripでは、防災について学びながら、それぞれの土地の魅力を感じられるプランを提案しています。
      </p>
-    </section>   
+    </section>
+    
+    <!-- フィルター選択ボタン -->
+    <section class="plan-filters">
+      <button class="filter-button">都道府県から選ぶ</button>
+      <button class="filter-button">テーマから選ぶ</button>
+      <button class="filter-button">季節から選ぶ</button>
+    </section>
   </main>
 
   <script src="script.js"></script>
