--- a/plan.html
+++ b/plan.html
@@ -44,7 +44,7 @@
     <section class="plan-description">
      <h2>SecureTripの旅行プラン</h2>
      <p>
-       SecureTripでは、防災について学びながら、それぞれの土地の魅力を感じられるプランを提案しています。
+       SecureTripでは、防災について学びながら、それぞれの土地の魅力を感じられるプランを提案しています。あなたにピッタリの旅を見つけてみませんか？
      </p>
     </section>
     
