--- a/plan.html
+++ b/plan.html
@@ -52,6 +52,7 @@
     <section class="plan-filters">
       <button class="filter-button">都道府県から選ぶ</button>
       <button class="filter-button">季節から選ぶ</button>
+      <button class="filter-button">テーマから選ぶ</button>
     </section>
   </main>
 
