--- a/plan.html
+++ b/plan.html
@@ -17,7 +17,7 @@
 
 　<!-- 本文 -->
   <main class="plan-container"> 
-    <h1>旅行プランを探す</h1>
+    <h1>SecureTripの旅行プラン</h1>
 
     <!-- カルーセル -->
     <div class="swiper-container">
@@ -42,9 +42,9 @@
 
     <!-- 以下の内容を追加 -->
     <section class="plan-description">
-     <h2>SecureTripの旅行プラン</h2>
+     <h2>旅行プランを探す</h2>
      <p>
-       SecureTripでは、防災について学びながら、それぞれの土地の魅力を感じられるプランを提案しています。あなたにピッタリの旅を見つけてみませんか？
+       SecureTripでは、観光を楽しみながら防災について学べるプランを提案しています。
      </p>
     </section>
     
