--- a/plan.html
+++ b/plan.html
@@ -40,6 +40,9 @@
     <!-- 以下の内容を追加 -->
     <section class="plan-description">
      <h1>旅行プランを探す</h1>
+      <div class="decorative-line">
+        <div class="blue-highlight"></div>
+      </div>
      <p>
        SecureTripでは、観光を楽しみながら防災について学べるプランを提案しています。
      </p>
