--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <!-- ヘッダー -->
   <div id="header-container"></div>
 
-  <!-- マップ部分 -->
+  <!-- マップ部分の内容を追加 -->
   <main class="map-container">
     <div id="map" class="map"></div>
+    <script src="map.js"></script>
   </main>
 
   <script src="script.js"></script>
