--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- ヘッダー -->
   <div id="header-container"></div>
 
+　<!-- バッジコンテナ -->
+  <div id="badge-container"></div>
+  
   <!-- マップ部分の内容を追加 -->
   <main class="map-container">
     <div id="map" class="map"></div>
