--- a/plan.html
+++ b/plan.html
@@ -20,13 +20,13 @@
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="assets/1plan.jpg" alt="広告１" class="slide-image">
+          <img src="assets/1plan.JPG" alt="広告１" class="slide-image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/plan2.jpg" alt="広告２" class="slide-image">
+          <img src="assets/plan2.JPG" alt="広告２" class="slide-image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/plan3.jpg" alt="広告３" class="slide-image">
+          <img src="assets/plan3.JPG" alt="広告３" class="slide-image">
         </div>
       </div>
       <!-- ページネーションとボタンのラッパー -->
