--- a/plan.html
+++ b/plan.html
@@ -20,13 +20,19 @@
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="assets/1plan.JPG" alt="広告１" class="slide-image">
+          <a href="page1.html">
+            <img src="assets/1plan.JPG" alt="広告１" class="slide-image">
+          </a>
         </div>
         <div class="swiper-slide">
-          <img src="assets/plan2.JPG" alt="広告２" class="slide-image">
+          <a href="page2.html">
+            <img src="assets/plan2.JPG" alt="広告２" class="slide-image">
+          </a>
         </div>
         <div class="swiper-slide">
-          <img src="assets/plan3.JPG" alt="広告３" class="slide-image">
+          <a href="page3.html">
+            <img src="assets/plan3.JPG" alt="広告３" class="slide-image">
+          </a>
         </div>
       </div>
       <!-- ページネーションとボタンのラッパー -->
