--- a/plan.html
+++ b/plan.html
@@ -43,7 +43,6 @@
     </div>
 
 
-    <!-- 以下の内容を追加 -->
     <section class="plan-description">
      <h1>旅行プランを探す</h1>
       <div class="decorative-line">
@@ -86,6 +85,15 @@
         テーマから選ぶ
       </button>
     </section>
+
+    <!-- 以下のセクション分を追加 -->
+    <section class="plan-description">
+     <h1>おすすめのプラン</h1>
+      <div class="decorative-line">
+        <div class="blue-highlight"></div>
+      </div>
+    </section>
+    
   </main>
 
   <script src="script.js"></script>
