--- a/badge.html
+++ b/badge.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <!-- ヘッダー -->
-  <div id="header-container"></div>
+  <div id="header-container">
+    <h1>バッジ一覧</h1>
+  </div>
 
-<!-- 本文 -->
-  <main class="contact-container">    
+  <!-- 本文 -->
+  <main class="contact-container">
+    <div id="badge-container">
+      <!-- バッジがここに動的に追加されます -->
+    </div>
   </main>
 
   <script src="script.js"></script>
