--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <!-- バッジコンテナ -->
   <div id="badge-container"></div> 
   </main>
+
+  <!-- PapaParseライブラリの読み込み -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
   
   <script src="script.js"></script>
 </body>
