--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
     // CSISジオコーダAPIを利用して検索
     function searchLocation(query) {
+      const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
       const url = `https://geocode.csis.u-tokyo.ac.jp/cgi-bin/simple_geocode.cgi?addr=${encodeURIComponent(query)}&charset=UTF8&geosys=world`;
       fetch(url)
         .then(response => response.text())
