--- a/index.html
+++ b/index.html
@@ -96,19 +96,26 @@
 
     // CSISジオコーダAPIを利用して検索
     function searchLocation(query) {
-      const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
       const url = `https://geocode.csis.u-tokyo.ac.jp/cgi-bin/simple_geocode.cgi?addr=${encodeURIComponent(query)}&charset=UTF8&geosys=world`;
+      
       fetch(url)
         .then(response => response.text())
         .then(data => {
-          const result = data.split(',');
-          if (result.length < 2) {
+          // XMLをパース
+          const parser = new DOMParser();
+          const xml = parser.parseFromString(data, "application/xml");
+
+          // 緯度・経度を抽出
+          const latitude = xml.querySelector("latitude")?.textContent;
+          const longitude = xml.querySelector("longitude")?.textContent;
+          
+          if (!latitude || !longitude) {
             alert('検索結果が見つかりません');
             return;
           }
 
-          const lat = parseFloat(result[1]);
-          const lng = parseFloat(result[0]);
+          const lat = parseFloat(latitude);
+          const lng = parseFloat(longitude);
 
           // マップを該当位置に移動
           map.setView([lat, lng], 15);
