--- a/index.html
+++ b/index.html
@@ -95,47 +95,51 @@
     });
 
     // CSISジオコーダAPIを利用して検索
-function searchLocation(query) {
-  const url = `https://geocode.csis.u-tokyo.ac.jp/cgi-bin/simple_geocode.cgi?addr=${encodeURIComponent(query)}&charset=UTF8&geosys=world`;
+　　function searchLocation(query) {
+ 　　 const url = `https://geocode.csis.u-tokyo.ac.jp/cgi-bin/simple_geocode.cgi?addr=${encodeURIComponent(query)}&charset=UTF8&geosys=world`;
 
-  fetch(url)
-    .then(response => {
-      if (!response.ok) {
-        throw new Error(`HTTPエラー: ${response.status}`);
-      }
-      return response.text();
-    })
-    .then(data => {
-      console.log("レスポンスデータ:", data); // デバッグ用
+ 　　 console.log("リクエストURL:", url); // リクエストURLを確認
 
-      // XMLをパース
-      const parser = new DOMParser();
-      const xml = parser.parseFromString(data, "application/xml");
+ 　　 fetch(url)
+ 　　   .then(response => {
+ 　　     console.log("HTTPステータス:", response.status); // HTTPステータスを確認
+  　　    if (!response.ok) {
+    　　    throw new Error(`HTTPエラー: ${response.status}`);
+    　　  }
+   　　   return response.text();
+  　　  })
+  　　  .then(data => {
+  　　    console.log("レスポンスデータ:", data); // レスポンスデータを確認
 
-      // 緯度・経度を抽出
-      const latitude = xml.querySelector("latitude")?.textContent;
-      const longitude = xml.querySelector("longitude")?.textContent;
+  　　    // XMLをパース
+  　　    const parser = new DOMParser();
+   　　   const xml = parser.parseFromString(data, "application/xml");
 
-      if (!latitude || !longitude) {
-        alert("検索結果が見つかりません");
-        return;
-      }
+ 　　     // 緯度・経度を抽出
+   　　   const latitude = xml.querySelector("latitude")?.textContent;
+   　　   const longitude = xml.querySelector("longitude")?.textContent;
 
-      const lat = parseFloat(latitude);
-      const lng = parseFloat(longitude);
+   　　   if (!latitude || !longitude) {
+   　　     alert("検索結果が見つかりません");
+   　　     return;
+  　　    }
 
-      // マップを該当位置に移動
-      map.setView([lat, lng], 15);
+    　　  const lat = parseFloat(latitude);
+    　　  const lng = parseFloat(longitude);
 
-      // ピンを追加
-      L.marker([lat, lng]).addTo(map)
-        .bindPopup(`<b>${query}</b><br>緯度: ${lat}, 経度: ${lng}`).openPopup();
-    })
-    .catch(error => {
-      console.error("エラー:", error);
-      alert("検索中にエラーが発生しました");
-    });
-}
+　　      // マップを該当位置に移動
+    　　  map.setView([lat, lng], 15);
+
+　　      // ピンを追加
+ 　　     L.marker([lat, lng]).addTo(map)
+ 　　       .bindPopup(`<b>${query}</b><br>緯度: ${lat}, 経度: ${lng}`).openPopup();
+　　    })
+　　    .catch(error => {
+ 　　     console.error("エラー詳細:", error); // エラー内容を出力
+ 　　     alert("検索中にエラーが発生しました");
+　　    });
+　　}
+
 
 
     // 検索ボタンのクリックイベント
