--- a/index.html
+++ b/index.html
@@ -95,50 +95,48 @@
     });
 
     // CSISジオコーダAPIを利用して検索
-　　function searchLocation(query) {
- 　　 const url = `https://geocode.csis.u-tokyo.ac.jp/cgi-bin/simple_geocode.cgi?addr=${encodeURIComponent(query)}&charset=UTF8&geosys=world`;
+function searchLocation(query) {
+  const url = `https://geocode.csis.u-tokyo.ac.jp/cgi-bin/simple_geocode.cgi?addr=${encodeURIComponent(query)}&charset=UTF8&geosys=world`;
+  
+  console.log("リクエストURL:", url); // リクエスト確認
 
- 　　 console.log("リクエストURL:", url); // リクエストURLを確認
+  fetch(url)
+    .then(response => {
+      console.log("HTTPステータス:", response.status); // ステータス確認
+      return response.text();
+    })
+    .then(data => {
+      console.log("レスポンスデータ:", data); // レスポンス内容を出力
 
- 　　 fetch(url)
- 　　   .then(response => {
- 　　     console.log("HTTPステータス:", response.status); // HTTPステータスを確認
-  　　    if (!response.ok) {
-    　　    throw new Error(`HTTPエラー: ${response.status}`);
-    　　  }
-   　　   return response.text();
-  　　  })
-  　　  .then(data => {
-  　　    console.log("レスポンスデータ:", data); // レスポンスデータを確認
+      // XMLをパース
+      const parser = new DOMParser();
+      const xml = parser.parseFromString(data, "application/xml");
 
-  　　    // XMLをパース
-  　　    const parser = new DOMParser();
-   　　   const xml = parser.parseFromString(data, "application/xml");
+      // 緯度・経度を抽出
+      const latitude = xml.querySelector("latitude")?.textContent;
+      const longitude = xml.querySelector("longitude")?.textContent;
 
- 　　     // 緯度・経度を抽出
-   　　   const latitude = xml.querySelector("latitude")?.textContent;
-   　　   const longitude = xml.querySelector("longitude")?.textContent;
+      if (!latitude || !longitude) {
+        alert("検索結果が見つかりません");
+        return;
+      }
 
-   　　   if (!latitude || !longitude) {
-   　　     alert("検索結果が見つかりません");
-   　　     return;
-  　　    }
+      const lat = parseFloat(latitude);
+      const lng = parseFloat(longitude);
 
-    　　  const lat = parseFloat(latitude);
-    　　  const lng = parseFloat(longitude);
+      // マップを該当位置に移動
+      map.setView([lat, lng], 15);
 
-　　      // マップを該当位置に移動
-    　　  map.setView([lat, lng], 15);
+      // ピンを追加
+      L.marker([lat, lng]).addTo(map)
+        .bindPopup(`<b>${query}</b><br>緯度: ${lat}, 経度: ${lng}`).openPopup();
+    })
+    .catch(error => {
+      console.error("エラー詳細:", error); // エラー内容を出力
+      alert("検索中にエラーが発生しました");
+    });
+}
 
-　　      // ピンを追加
- 　　     L.marker([lat, lng]).addTo(map)
- 　　       .bindPopup(`<b>${query}</b><br>緯度: ${lat}, 経度: ${lng}`).openPopup();
-　　    })
-　　    .catch(error => {
- 　　     console.error("エラー詳細:", error); // エラー内容を出力
- 　　     alert("検索中にエラーが発生しました");
-　　    });
-　　}
 
 
 
