--- a/index.html
+++ b/index.html
@@ -3,131 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#0082CA">
+  <meta name="theme-color" content="#0082CA"> <!-- ステータスバーの背景色を指定 -->
   <title>ぼうそうV - マップ画面</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .search-box {
-      position: relative;
-      background: white;
-      padding: 10px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
-      margin: 10px auto;
-      width: 90%;
-      max-width: 500px;
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
-      border-radius: 8px;
-    }
-
-    .search-box input {
-      flex-grow: 1;
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .search-box button {
-      padding: 8px 12px;
-      background: #0082CA;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .search-box button:hover {
-      background: #005f9c;
-    }
-
-    #map {
-      width: 100%;
-      height: 80vh;
-    }
-  </style>
 </head>
 <body>
   <!-- ヘッダー -->
   <div id="header-container"></div>
 
-  <!-- 検索ボックス -->
-  <div class="search-box">
-    <input type="text" id="search-input" placeholder="住所や建物名を入力">
-    <button id="search-button">検索</button>
-  </div>
-
-  <!-- マップ部分 -->
+  <!-- マップ部分の内容を追加 -->
   <main class="map-container">
-    <div id="map"></div>
+    <div id="map" class="map"></div>
+    <script src="map.js"></script>
+
+  <!-- バッジコンテナ -->
+  <div id="badge-container"></div> 
   </main>
+  <!-- PapaParseライブラリの読み込み -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 
-  <!-- Leafletライブラリ -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
-
-  <!-- マップスクリプト -->
-  <script src="map.js"></script>
-
-  <script>
-    // CSISジオコーダAPIを利用して検索
-    function searchLocation(query) {
-      const url = `https://geocode.csis.u-tokyo.ac.jp/cgi-bin/simple_geocode.cgi?addr=${encodeURIComponent(query)}&charset=UTF8&geosys=world`;
-
-      fetch(url)
-        .then(response => response.text())
-        .then(data => {
-          const parser = new DOMParser();
-          const xml = parser.parseFromString(data, "application/xml");
-
-          const latitude = xml.querySelector("latitude")?.textContent;
-          const longitude = xml.querySelector("longitude")?.textContent;
-
-          if (!latitude || !longitude) {
-            alert('検索結果が見つかりません');
-            return;
-          }
-
-          const lat = parseFloat(latitude);
-          const lng = parseFloat(longitude);
-
-          const map = L.map('map'); // map.jsで初期化されたマップを取得
-
-          // マップを該当位置に移動
-          map.setView([lat, lng], 15);
-
-          // ピンを追加
-          L.marker([lat, lng]).addTo(map)
-            .bindPopup(`<b>${query}</b><br>緯度: ${lat}, 経度: ${lng}`).openPopup();
-        })
-        .catch(error => {
-          console.error('エラー:', error);
-          alert('検索中にエラーが発生しました');
-        });
-    }
-
-    // 検索ボタンのクリックイベント
-    document.getElementById('search-button').addEventListener('click', () => {
-      const query = document.getElementById('search-input').value.trim();
-      if (!query) {
-        alert('住所や建物名を入力してください');
-        return;
-      }
-      searchLocation(query);
-    });
-
-    // Enter キーで検索を実行
-    document.getElementById('search-input').addEventListener('keypress', (e) => {
-      if (e.key === 'Enter') {
-        const query = document.getElementById('search-input').value.trim();
-        if (!query) {
-          alert('住所や建物名を入力してください');
-          return;
-        }
-        searchLocation(query);
-      }
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
-</html>
