--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <!-- マップ部分の内容を追加 -->
   <main class="map-container">
     <div id="map" class="map"></div>
+    <!-- ピンデータファイル -->
+　  <script src="pins.js"></script>
     <script src="map.js"></script>
 
   <!-- バッジコンテナ -->
