--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ぼうそうV - 旅行プラン１</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="schedule.css">
 </head>
 <body>
   <!-- ヘッダー -->
