--- a/page2.html
+++ b/page2.html
@@ -4,16 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ぼうそうV - 旅行プラン２</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="plan.css">
 </head>
-<body>
+  <body>
   <!-- ヘッダー -->
   <div id="header-container"></div>
 
-<!-- 本文 -->
-  <main class="contact-container">    
+  <!-- 本文 -->
+  <main class="contact-container">
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <p class="time">8:30</p>
+          <h3 class="title">ジム</h3>
+          <p class="description">身体を動かすのが好きなので、朝の予定に余裕があるときはフレックスタイム制度を活用してジムに行っています。</p>
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <p class="time">10:00</p>
+          <h3 class="title">自宅にて始業</h3>
+          <p class="description">メールチェック・スケジュール確認。</p>
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <p class="time">11:00</p>
+          <h3 class="title">会議（オンラインMTG）</h3>
+          <p class="description">案件の進め方やスケジュールの調整を行います。</p>
+        </div>
+      </div>
+    </div>
   </main>
 
   <script src="script.js"></script>
 </body>
+
 </html>
