--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ぼうそうV - 旅行プラン２</title>
-  <link rel="stylesheet" href="plan.css">
+  <link rel="stylesheet" href="schedule.css">
 </head>
   <body>
   <!-- ヘッダー -->
