--- a/page3.html
+++ b/page3.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#0082CA">
   <title>ぼうそうV - 旅行プラン３</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="schedule.css">
@@ -75,5 +76,6 @@
   </main>
 
   <script src="schedule.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
