--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,7 @@
       </div>
     
       <!-- タブの内容 -->
-      <div id="day1" class="tab-content contact-container">
+      <div id="day1" class="tab-content contact-container active" style="display: block;">
         <div class="timeline">
           <div class="timeline-item">
             <div class="timeline-marker"></div>
