--- a/page3.html
+++ b/page3.html
@@ -14,6 +14,14 @@
 
 <!-- 本文 -->
   <main>
+    <!-- 旅行プランのタイトルと説明文 -->
+    <section class="plan-header">
+      <h1 class="plan-title">東京旅行プラン</h1>
+      <p class="plan-description">
+        東京での楽しい1泊2日の旅行プランをご紹介します。観光名所を巡りながら、美味しい食事やリラックスできるスポットを満喫しましょう！
+      </p>
+    </section>
+    
     <!-- タブのコンテナ -->
     <div class="tab-container">
       <!-- タブのヘッダー -->
