--- a/plan.html
+++ b/plan.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0082CA"> <!-- ステータスバーの背景色を指定 -->
-  <title>ぼうそうV - 旅行プラン</title>
+  <title>ぼうそうV - 東京旅行プラン1</title>
+  <meta name="location" content="東京"> <!-- 都道府県タグを追加 -->
   <link rel="stylesheet" href="style.css">
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
