--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0082CA">
-  <title>ぼうそうV - 旅行プラン３</title>
+  <title>ぼうそうV - 東京旅行プラン１</title>
+  <meta name="location" content="東京"> <!-- 都道府県タグを追加 -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="schedule.css">
 </head>
